--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <center>
      <p>   
-    if you hack me this is war i will hunt you down gust wtach the video
+    if you hack me this is war i will hunt you down gust wtach the video plz enjoy
      </p>    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/d9TpRfDdyU0" frameborder="0" allowfullscreen></iframe>
     </center>
