--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head> 
-    <title>hey, i am doge321</title>
+    <title>hey, i am doge320</title>
 </head>
     
 <body>
     
     <center>
      <p>   
-    wtach the video plz enjoy
+    plz enjoy the viedos of my songs 
      </p> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/WxjNTk_vb2Y" frameborder="0" allowfullscreen></iframe>
 
