--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>
     
     <center>
+        https://s-media-cache-ak0.pinimg.com/originals/6e/95/01/6e9501282247d5a4e4878224e401a04f.jpg
      <p>   
     plz enjoy the viedos of my songs 
      </p> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/WxjNTk_vb2Y" frameborder="0" allowfullscreen></iframe>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YzWqFk2FYLI" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/FCFgRBPcqR4" frameborder="0" allowfullscreen></iframe>
         
     </center>
     </body> 
