--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
      <p>   
     plz enjoy the viedos of my songs 
      </p> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PvRQ_h4505U?list=PLiqQaVH2Y0Af8yvasavF7bXUpkL_z8WEu" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/snyHRvl9Q2U?list=PLiqQaVH2Y0Af8yvasavF7bXUpkL_z8WEu" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/h3zAqKk65wc?list=PLiqQaVH2Y0Af8yvasavF7bXUpkL_z8WEu" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zQ-yUNEnxys" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/WxjNTk_vb2Y" frameborder="0" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YzWqFk2FYLI" frameborder="1" allowfullscreen></iframe>
